@@ -94,14 +94,15 @@ extern std::string KernelSource_texture_brick_funcs;
 extern std::string KernelSource_texture_clamp_funcs;
 extern std::string KernelSource_texture_colordepth_funcs;
 extern std::string KernelSource_texture_densitygrid_funcs;
+extern std::string KernelSource_texture_distort_funcs;
 extern std::string KernelSource_texture_fresnelcolor_funcs;
 extern std::string KernelSource_texture_fresnelconst_funcs;
 extern std::string KernelSource_texture_hitpoint_funcs;
 extern std::string KernelSource_texture_hsv_funcs;
 extern std::string KernelSource_texture_irregulardata_funcs;
 extern std::string KernelSource_texture_others_funcs;
-extern std::string KernelSource_texture_random_funcs;
 extern std::string KernelSource_texture_triplanar_funcs;
+extern std::string KernelSource_texture_random_funcs;
 extern std::string KernelSource_texture_funcs;
 extern std::string KernelSource_texture_funcs_evalops;
 extern std::string KernelSource_sampleresult_types;
