@@ -30,6 +30,8 @@ typedef enum {
 	EVAL_TRIPLANAR_STEP_1,
 	EVAL_TRIPLANAR_STEP_2,
 	EVAL_TRIPLANAR_STEP_3,
+	// For the very special case of Distort texture
+	EVAL_DISTORT_SETUP,
 	// For evaluting generic bump mapping
 	EVAL_BUMP_GENERIC_OFFSET_U,
 	EVAL_BUMP_GENERIC_OFFSET_V,
@@ -64,7 +66,7 @@ typedef enum {
 	BLENDER_MUSGRAVE, BLENDER_NOISE, BLENDER_STUCCI, BLENDER_WOOD,  BLENDER_VORONOI,
 	CHECKERBOARD2D, CHECKERBOARD3D, CLOUD_TEX, FBM_TEX,
 	MARBLE, DOTS, BRICK, WINDY, WRINKLED, UV_TEX, BAND_TEX,
-	WIREFRAME_TEX, // 60 textures
+	WIREFRAME_TEX, // 63 textures
 	// Fresnel textures
 	FRESNELCOLOR_TEX, FRESNELCONST_TEX
 } TextureType;
